objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Base_Contact_ID__c</fullName>
        <label>Base Contact ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Deal_ID__c</fullName>
        <label>Base Deal ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_At__c</fullName>
        <label>Completed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hold_Until__c</fullName>
        <label>Hold Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Source_Tree_ID__c</fullName>
        <label>Migration Source Tree ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Copywriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Happiness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workflow_Identifier__c</fullName>
        <label>Workflow Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Version__c</fullName>
        <label>Workflow Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_tasks</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <label>6. All tasks</label>
    </listViews>
    <listViews>
        <fullName>Inspect_car</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>Inspect car</value>
        </filters>
        <label>2. Inspect car</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>Open_tasks</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>1. Open tasks</label>
    </listViews>
    <listViews>
        <fullName>Photograph_car</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>Photograph car</value>
        </filters>
        <label>4. Photograph car</label>
    </listViews>
    <listViews>
        <fullName>Repair_car</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>Repair car</value>
        </filters>
        <label>5. Repair car</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>Wash_and_detail_car</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>Wash and detail car</value>
        </filters>
        <label>3. Wash and detail car</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>